@@ -1,11 +1,0 @@
-DESTDIR=/
-prefix=usr
-
-all:
-	@echo "Nothing to do"
-
-install:
-	install -D -m 0755 wb-watch-configs $(DESTDIR)/$(prefix)/bin/wb-watch-configs
-
-.PHONY: install clean all
-
