@@ -1,3 +1,9 @@
+wb-configs (1.75.3) stable; urgent=medium
+  
+  * wb-watch-configs moved 
+
+ -- Attila Door <a.door@contactless.ru>  Wed, 28 Mar 2018 15:03:22 +0300
+
 wb-configs (1.75.2) stable; urgent=medium
   
   * add ssh config to displace list
